--- a/src/main/webapp/Views/Secured/Provider/ProviderCreateView.xhtml
+++ b/src/main/webapp/Views/Secured/Provider/ProviderCreateView.xhtml
@@ -2,7 +2,8 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:b="http://bootsfaces.net/ui" xmlns:p="http://primefaces.org/ui">
+	xmlns:b="http://bootsfaces.net/ui" xmlns:p="http://primefaces.org/ui"
+	xmlns:pe="http://primefaces.org/ui/extensions">
 <h:head>
 
 	<f:metadata>
@@ -26,212 +27,217 @@
 			<h:form id="mainForm">
 
 				<p:wizard id="signUpWizardId">
+
 					<p:tab id="personal" title="Personal">
-						<p:panel header="Personal Details">
-							<p:messages />
-
-							<h:panelGrid>
-
-								<p:row>
-									<p:column>
-
+						<p:messages />
+						<b:container fluid="false">
+							<b:panel title="Personal information" span="7">
+								<b:row>
+									<b:column span="3">
 										<h:outputLabel value="First Name: * " for="tfFirstName" />
+									</b:column>
+									<b:column span="3">
 										<p:inputText id="tfFirstName"
 											value="#{createProviderController.provider.firstName}"
 											required="true" />
+									</b:column>
 
-										<p:column>
+									<b:column span="3">
+										<h:outputLabel value="Last Name: * " for="tfFirstName" />
+									</b:column>
 
-											<h:outputLabel value="Last Name: * " for="tfFirstName" />
-											<p:inputText id="tfLastName"
-												value="#{createProviderController.provider.lastName}"
-												required="true" />
+									<b:column span="3">
+										<p:inputText id="tfLastName"
+											value="#{createProviderController.provider.lastName}"
+											required="true" />
+									</b:column>
+								</b:row>
 
-										</p:column>
-									</p:column>
-								</p:row>
-
-								<p:row>
-
-								</p:row>
-
-								<p:row>
-									<p:column>
-										<!-- for="tfNpiNumber" -->
+								<b:row>
+									<b:column span="3">
 										<h:outputLabel value="NPInumber: * " />
+									</b:column>
+
+									<b:column span="9">
 										<p:inputText id="tfNpiNumber"
 											value="#{createProviderController.provider.npiNum}"
 											required="true" />
-									</p:column>
-								</p:row>
+									</b:column>
+								</b:row>
+							</b:panel>
 
-								<p:panel header="CAQH Information">
+							<b:panel title="CAQH Information" span="5">
+								<b:row>
+									<b:column span="4">
+										<h:outputLabel value="CAQH Id" />
+									</b:column>
+									<b:column span="8">
+										<p:inputText id="tf_CAQHId"
+											value="#{createProviderController.provider.CAQHId}" />
+									</b:column>
+								</b:row>
 
-									<p:row>
-										<p:column>
-											<h:outputLabel value="CAQH Id" />
-											<p:inputText id="tf_CAQHId"
-												value="#{createProviderController.provider.CAQHId}" />
-										</p:column>
-									</p:row>
+								<b:row>
+									<b:column span="4">
+										<h:outputLabel value="CAQH Password" />
+									</b:column>
 
-									<p:row>
-										<p:column>
-											<h:outputLabel value="CAQH Password" />
-											<p:inputText id="tf_CAQHPassword"
-												value="#{createProviderController.provider.CAQHPassword}" />
-										</p:column>
-									</p:row>
-								</p:panel>
-
-
-
-
-
-
-
-
-
-
-							</h:panelGrid>
-
-
-						</p:panel>
+									<b:column span="8">
+										<p:inputText id="tf_CAQHPassword"
+											value="#{createProviderController.provider.CAQHPassword}" />
+									</b:column>
+								</b:row>
+							</b:panel>
+						</b:container>
 					</p:tab>
 
 					<p:tab id="additionalInfoId" title="Additional Information">
 
-						<b:container>
+						<b:container fluid="true">
 
-							<b:panel title="Additional Information" span="6">
+							<b:column span="6">
+
 								<b:row>
-									<b:column span="3">
-										<h:outputLabel value="Date of birth:* " />
-									</b:column>
+									<b:panel title="Additional Information" span="12">
+										<b:row>
+											<b:column span="3">
+												<h:outputLabel value="Date of birth:* " />
+											</b:column>
 
-									<b:column span="3">
-										<p:calendar id="popup"
-											value="#{createProviderController.provider.dob}" />
-									</b:column>
+											<b:column span="3">
+												<p:calendar id="popup"
+													value="#{createProviderController.provider.dob}" />
+											</b:column>
 
-									<b:column span="3">
-										<h:outputLabel value="Medicare I.D" />
-									</b:column>
+											<b:column span="3">
+												<h:outputLabel value="Medicare I.D" />
+											</b:column>
 
-									<b:column span="3">
-										<p:inputText
-											value="#{createProviderController.provider.medicareId}" />
-									</b:column>
+											<b:column span="3">
+												<p:inputText
+													value="#{createProviderController.provider.medicareId}" />
+											</b:column>
+										</b:row>
+
+										<b:row>
+											<b:column span="3">
+												<h:outputLabel value="Social Security Number:* " />
+											</b:column>
+
+											<b:column span="3">
+												<p:inputText id="tf_SSN"
+													value="#{createProviderController.provider.socialSecurityNumber}"
+													rendered="true" />
+											</b:column>
+
+											<b:column span="3">
+												<h:outputLabel value="Degree:* " />
+											</b:column>
+
+											<b:column span="3">
+												<p:inputText id="tf_Degree"
+													value="#{createProviderController.provider.degree}"
+													rendered="true" />
+											</b:column>
+										</b:row>
+									</b:panel>
 								</b:row>
 
 								<b:row>
-									<b:column span="3">
-										<h:outputLabel value="Social Security Number:* " />
-										</b:column>
-										
-										<b:column span="3">
-										<p:inputText id="tf_SSN"
-											value="#{createProviderController.provider.socialSecurityNumber}"
-											rendered="true" />
-										</b:column>
+									<b:panel title="Emails:" span="12">
+										<f:facet name="footer">
+											<p:outputLabel value="Emails:" />
+											<p:commandButton value="+" update="@parent:@parent"
+												actionListener="#{createProviderController.addEmailClicked()}" />
+										</f:facet>
 
-									<b:column span="3">
-										<h:outputLabel value="Degree:* " />
-										</b:column>
-										
-										<b:column span="3">
-										<p:inputText id="tf_Degree"
-											value="#{createProviderController.provider.degree}"
-											rendered="true" />
-										</b:column>										
-								</b:row>
-							</b:panel>
-						</b:container>
-
-
-					
-<!-- 						<p:row id="emailRow">
-							<p:column>
-								<p:panel id="emailPanel" header="Emails">
-									<f:facet name="header">
-										<p:outputLabel value="Emails:" />
-										<p:commandButton value="+" update="emailOutputPanel"
-											actionListener="#{createProviderController.addEmailClicked()}" />
-									</f:facet>
-									<p:outputPanel id="emailOutputPanel">
-										<p:dataTable id="emailTable" var="emailVar"
+										<ui:repeat var="emailVar"
 											value="#{createProviderController.emailsList}">
-											<p:column>
-												<h:outputLabel value="Email" />
-												<p:inputText value="#{emailVar.email}" />
-											</p:column>
 
-											<p:column>
-												<p:commandButton
-													actionListener="#{createProviderController.removeEmailClicked(emailVar)}"
-													value="-" update="@parent:@parent" />
-											</p:column>
-										</p:dataTable>
-									</p:outputPanel>
-								</p:panel>
-							</p:column>
-						</p:row>
+											<b:row>
+												<b:column span="3">
+													<h:outputLabel value="Email" />
+												</b:column>
 
-						<p:row id="phoneRow">
-							<p:column>
-								<p:panel header="Phone Numbers">
-									<f:facet name="header">
-										<p:outputLabel value="Phone Number:" />
-										<p:commandButton value="+" update="phoneOutputPanel"
-											actionListener="#{createProviderController.addPhoneClicked()}" />
-									</f:facet>
-									<p:outputPanel id="phoneOutputPanel">
-										<p:dataTable var="phoneVar"
+												<b:column span="6">
+													<p:inputText value="#{emailVar.email}" />
+												</b:column>
+
+												<b:column span="3">
+													<p:commandButton
+														actionListener="#{createProviderController.removeEmailClicked(emailVar)}"
+														value="-" update="@parent:@parent:@parent:@parent" />
+												</b:column>
+											</b:row>
+										</ui:repeat>
+									</b:panel>
+								</b:row>
+
+							</b:column>
+
+							<b:column span="6">
+								<b:row>
+									<b:panel title="Phone Numbers:" span="12">
+										<f:facet name="footer">
+											<p:outputLabel value="Phone Number:" />
+											<p:commandButton value="+" update="@parent:@parent"
+												actionListener="#{createProviderController.addPhoneClicked()}" />
+										</f:facet>
+
+										<ui:repeat var="phoneVar"
 											value="#{createProviderController.phoneList}">
-											<p:column>
-												<h:outputLabel value="Phone" />
-												<p:inputText value="#{phoneVar.number}" />
-											</p:column>
 
-											<p:column>
-												<p:commandButton
-													actionListener="#{createProviderController.removePhoneClicked(phoneVar)}"
-													value="-" update="@parent:@parent" />
-											</p:column>
-										</p:dataTable>
-									</p:outputPanel>
-								</p:panel>
-							</p:column>
-						</p:row>
+											<b:row>
+												<b:column span="3">
+													<h:outputLabel value="Phone" />
+												</b:column>
 
-						<p:row id="faxRow">
-							<p:column>
-								<p:panel header="Fax Numbers">
-									<f:facet name="header">
-										<p:outputLabel value="Fax Number:" />
-										<p:commandButton value="+" update="faxOutputPanel"
-											actionListener="#{createProviderController.addFaxClicked()}" />
-									</f:facet>
-									<p:outputPanel id="faxOutputPanel">
-										<p:dataTable var="faxVar"
+												<b:column span="6">
+													<p:inputText value="#{phoneVar.number}" />
+												</b:column>
+
+												<b:column span="3">
+													<p:commandButton
+														actionListener="#{createProviderController.removePhoneClicked(phoneVar)}"
+														value="-" update="@parent:@parent:@parent:@parent" />
+												</b:column>
+											</b:row>
+										</ui:repeat>
+									</b:panel>
+								</b:row>
+
+								<b:row>
+									<b:panel title="Fax Numbers:" span="12">
+										<f:facet name="footer">
+											<p:outputLabel value="Fax Number:" />
+											<p:commandButton value="+" update="@parent:@parent"
+												actionListener="#{createProviderController.addFaxClicked()}" />
+										</f:facet>
+
+										<ui:repeat var="faxVar"
 											value="#{createProviderController.faxList}">
-											<p:column>
-												<h:outputLabel value="Fax Number" />
-												<p:inputText value="#{faxVar.faxNumber}" />
-											</p:column>
 
-											<p:column>
-												<p:commandButton
-													actionListener="#{createProviderController.removeFaxClicked(faxVar)}"
-													value="-" update="@parent:@parent" />
-											</p:column>
-										</p:dataTable>
-									</p:outputPanel>
-								</p:panel>
-							</p:column>
-						</p:row>
-						</p:panelGrid> -->
-						</p:panel>
+											<b:row>
+												<b:column span="3">
+													<h:outputLabel value="Fax Number" />
+												</b:column>
+
+												<b:column span="6">
+													<p:inputText value="#{faxVar.faxNumber}" />
+												</b:column>
+
+												<b:column span="3">
+													<p:commandButton
+														actionListener="#{createProviderController.removeFaxClicked(faxVar)}"
+														value="-" update="@parent:@parent:@parent:@parent" />
+												</b:column>
+											</b:row>
+										</ui:repeat>
+									</b:panel>
+								</b:row>
+
+							</b:column>
+						</b:container>
 					</p:tab>
 
 					<p:tab title="Education">
@@ -361,50 +367,14 @@
 					<p:tab title="Speciality">
 
 						<b:container>
-
-							<b:panel title="Primary Speciality">
-								<b:panelGrid colSpans="3,9">
-
-									<p:outputLabel value="Primary Speclity:" />
-									<p:selectOneMenu
-										value="#{createProviderController.provider.qualitication.primarySpeciality.name}">
-
-										<f:selectItem itemLabel="Select One" itemValue="" />
-										<f:selectItems
-											value="#{createProviderController.primarySpeciality}"
-											var="specility" itemLabel="#{specility}"
-											itemValue="#{specility}" />
-									</p:selectOneMenu>
-
-									<p:outputLabel value="Name of Board:" />
-									<p:selectOneMenu
-										value="#{createProviderController.provider.qualitication.primarySpeciality.board}">
-
-										<f:selectItem itemLabel="Select One" itemValue="" />
-										<f:selectItems
-											value="#{createProviderController.nameOfBoards}" var="board"
-											itemLabel="#{board}" itemValue="#{board}" />
-									</p:selectOneMenu>
-
-								</b:panelGrid>
-							</b:panel>
-
-							<b:panel>
-
-								<f:facet name="heading">
-									<p:outputLabel value="Add more" />
-									<p:commandButton value="+"
-										actionListener="#{createProviderController.addOtherSpecilityClicked()}"
-										update="@parent:@parent" />
-
-								</f:facet>
-								<b:panelGrid colSpans="3,9">
-
-									<ui:repeat var="specility"
-										value="#{createProviderController.specilityList}">
-
-										<p:outputLabel value="Speclity Name:" />
-										<p:selectOneMenu value="#{specility.name}">
+							<b:panel title="Primary Speciality" span="6">
+								<b:row>
+									<b:column span="3">
+										<p:outputLabel value="Primary Speclity:" />
+									</b:column>
+									<b:column span="9">
+										<p:selectOneMenu
+											value="#{createProviderController.provider.qualitication.primarySpeciality.name}">
 
 											<f:selectItem itemLabel="Select One" itemValue="" />
 											<f:selectItems
@@ -412,24 +382,77 @@
 												var="specility" itemLabel="#{specility}"
 												itemValue="#{specility}" />
 										</p:selectOneMenu>
+									</b:column>
+								</b:row>
 
+								<b:row>
+									<b:column span="3">
 										<p:outputLabel value="Name of Board:" />
-										<p:selectOneMenu value="#{specility.board}">
+									</b:column>
+									<b:column span="9">
+										<p:selectOneMenu
+											value="#{createProviderController.provider.qualitication.primarySpeciality.board}">
 
 											<f:selectItem itemLabel="Select One" itemValue="" />
 											<f:selectItems
 												value="#{createProviderController.nameOfBoards}" var="board"
 												itemLabel="#{board}" itemValue="#{board}" />
 										</p:selectOneMenu>
+									</b:column>
+								</b:row>
+							</b:panel>
 
-										<p:commandButton value="-"
-											actionListener="#{createProviderController.removeOtherSpecility(specility)}"
-											update="@parent:@parent" />
+							<b:panel title="Secondary Specilities" span="6">
 
-									</ui:repeat>
+								<f:facet name="footer">
+									<p:outputLabel value="Add more" />
+									<p:commandButton value="+"
+										actionListener="#{createProviderController.addOtherSpecilityClicked()}"
+										update="@parent:@parent" />
+								</f:facet>
 
-								</b:panelGrid>
+								<ui:repeat var="specility"
+									value="#{createProviderController.specilityList}">
 
+									<b:row>
+										<b:column span="3">
+											<p:outputLabel value="Speclity Name:" />
+										</b:column>
+
+										<b:column span="6">
+											<p:selectOneMenu value="#{specility.name}">
+
+												<f:selectItem itemLabel="Select One" itemValue="" />
+												<f:selectItems
+													value="#{createProviderController.primarySpeciality}"
+													var="specility" itemLabel="#{specility}"
+													itemValue="#{specility}" />
+											</p:selectOneMenu>
+										</b:column>
+
+										<b:column span="3">
+											<p:commandButton value="-"
+												actionListener="#{createProviderController.removeOtherSpecility(specility)}"
+												update="@parent:@parent:@parent:@parent" />
+										</b:column>
+									</b:row>
+
+									<b:row>
+										<b:column span="3">
+											<p:outputLabel value="Name of Board:" />
+										</b:column>
+
+										<b:column span="9">
+											<p:selectOneMenu value="#{specility.board}">
+
+												<f:selectItem itemLabel="Select One" itemValue="" />
+												<f:selectItems
+													value="#{createProviderController.nameOfBoards}"
+													var="board" itemLabel="#{board}" itemValue="#{board}" />
+											</p:selectOneMenu>
+										</b:column>
+									</b:row>
+								</ui:repeat>
 							</b:panel>
 
 						</b:container>
@@ -439,27 +462,37 @@
 					<p:tab title="Other information">
 
 						<b:container>
+							<b:panel span="6" title="Other information">
+								<b:row>
+									<b:column span="5">
+										<p:outputLabel value="Oldest Patient Age Limit" />
+									</b:column>
 
-							<b:panelGrid colSpans="3,3,3,3">
+									<b:column span="7">
+										<p:inputText converter="javax.faces.Integer"
+											value="#{createProviderController.provider.otherInfo.oldestPatientAgeLimit}" />
+									</b:column>
+								</b:row>
 
-								<p:outputLabel value="Oldest Patient Age Limit" />
-								<p:inputText converter="javax.faces.Integer"
-									value="#{createProviderController.provider.otherInfo.oldestPatientAgeLimit}" />
+								<b:row>
+									<b:column span="3">
+										<p:outputLabel value="Panel status" />
+									</b:column>
 
-								<p:outputLabel value="Panel status" />
-								<p:inputSwitch
-									value="#{createProviderController.provider.otherInfo.panelStatus}" />
-							</b:panelGrid>
+									<b:column span="9">
+										<p:inputSwitch
+											value="#{createProviderController.provider.otherInfo.panelStatus}" />
+									</b:column>
+								</b:row>
+							</b:panel>
 
-							<b:panel>
-								<f:facet name="heading">
+							<b:panel span="6" title="Languages">
+								<f:facet name="footer">
 									<p:outputLabel value="Add language" />
 									<p:commandButton value="+"
 										actionListener="#{createProviderController.addLanguageClicked()}"
 										update="@parent:@parent" />
 								</f:facet>
-
-								<!-- 			<b:panelGrid colSpans="3,6,3"> -->
 
 								<ui:repeat var="language"
 									value="#{createProviderController.languageList}">
@@ -478,16 +511,25 @@
 												actionListener="#{createProviderController.removeLanguage(language)}"
 												update="@parent:@parent:@parent:@parent" />
 										</b:column>
-
 									</b:row>
-
-
 								</ui:repeat>
-								<!-- 	</b:panelGrid>
-				 -->
-
 							</b:panel>
-
+							
+							<b:panel span="6">
+							
+							<b:row>
+							<b:column span="12">
+							
+							<pe:timePicker  mode="spinnerTimeWidget" style="width:200px">
+							
+							</pe:timePicker>
+							
+							</b:column>
+							</b:row>
+							
+							
+							</b:panel>
+							
 						</b:container>
 
 					</p:tab>
@@ -508,6 +550,10 @@
 
 .green {
 	color: green
+}
+
+.row {
+	margin: 10px 0;
 }
 
 .ui-dialog {
