Create provider mostly done.. edit provider scenario remainning

--- a/src/main/webapp/Views/Secured/Provider/ProviderView.xhtml
+++ b/src/main/webapp/Views/Secured/Provider/ProviderView.xhtml
@@ -92,7 +92,7 @@
 								action="#{providerController.updateClicked(provider)}" /> -->
 
 						<h:link value="Edit "
-							outcome="#{providerController.moveToEditView(provider)}">
+							outcome="#{providerController.createProviderClicked()}">
 
 							<f:param name="id" value="#{provider.id}" />
 						</h:link>
